# ROS_Class

ROS_homework_submit/: ROS大作业pre 杨孟天.pptx
ROS_homework_submit/UR3/myur/: CMakeLists.txt
ROS_homework_submit/UR3/myur/launch/: move_group.launch  moveit_rviz.launch  myur_moveit_planning_execution.launch  ur3_commander.launch
ROS_homework_submit/UR3/ur3_control/: CMakeLists.txt
ROS_homework_submit/turtlebot/: go_squar_on_map.py  test.pgm  test.yaml
ROS_homework_submit/turtlebot/collision_detector/: CMakeLists.txt
UR/devel/: .catkin  .rosinstall  setup.sh
UR/devel/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h  ToolDataMsg.h
UR/devel/lib/pkgconfig/: ur10_moveit_config.pc  ur3_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/beginner_tutorials/: Add.h  AddRequest.h  AddResponse.h  nstr.h
catkin_ws/devel/lib/beginner_tutorials/: add_client  add_server  color  listener  talker
catkin_ws/devel/lib/pkgconfig/: arm.pc  beginner_tutorials.pc
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  demo.launch  package.xml
catkin_ws/src/beginner_tutorials/src/: add_client.cpp  add_server.cpp  listener.cpp  talker.cpp
code_submit/: ROS大作业.pptx
code_submit/UR3/myur/gazebo/: myur3.launch
code_submit/UR3/myur/launch/: demo.launch  planning_context.launch
d_4/devel/: .catkin  .rosinstall  setup.sh
d_4/devel/include/beginner_tutorials/: nstr.h
d_4/devel/lib/beginner_tutorials/: listener  talker
d_4/devel/lib/pkgconfig/: arm.pc  arm_description.pc  beginner_tutorials.pc
d_4/src/beginner_tutorials/src/: listener.cpp  talker.cpp
d_5/devel/: .catkin  .rosinstall  setup.sh
d_5/devel/include/meta/: nstr.h
d_5/devel/lib/meta/: listener  talker
d_5/devel/lib/pkgconfig/: meta.pc
d_5/src/meta/: CMakeLists.txt
d_5/src/meta/msg/: nstr.msg
d_5/src/meta/src/: listener.cpp  talker.cpp
d_6/devel/: .catkin  .rosinstall  setup.sh
d_6/devel/include/chapter4/: SetSpeed.h  SetSpeedRequest.h  SetSpeedResponse.h
d_6/devel/lib/chapter4/: example1  example2  example3  example4  example5  example6  example7
d_6/devel/lib/chapter9/: robot_location  turtle_tf_broadcaster
d_6/devel/lib/pkgconfig/: arm7.pc  arm_description.pc  chapter4.pc  chapter9.pc  myUR.pc  myarm.pc  myur.pc  ur3_control.pc  ur3_moveit_config.pc
d_6/devel/lib/ur3_control/: ur3_control
d_6/src/: box.stl
d_6/src/arm_description/: CMakeLists.txt  package.xml
d_6/src/arm_description/arm_moveit/: package.xml
d_6/src/chapter4/: CMakeLists.txt  package.xml
d_6/src/chapter4/launch/: example1.launch  example4_record.launch  example7.launch
d_6/src/chapter4/src/: example1.cpp  example2.cpp
d_6/src/chapter9/: package.xml
d_6/src/chapter9/src/: robot_location.cpp  tf_broadcaster.cpp  tf_listener.cpp
d_6/src/myarm/: .setup_assistant
d_6/src/myarm/config/: fake_controllers.yaml  ompl_planning.yaml
d_6/src/myarm/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  planning_pipeline.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
d_6/src/myur/: ur3_moveit.launch
d_6/src/ur3_control/src/: ur3_control.cpp
hardware/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
hardware/devel/lib/hardware1/: talker
hardware/devel/lib/pkgconfig/: arm_moveit.pc  hardware1.pc
hardware/src/hardware1/: CMakeLists.txt  demo.launch
hardware/src/hardware1/src/: talker.cpp
hardware/src/kinetic/src/: kinetic_point.cpp
kinect/devel/: .catkin  .rosinstall  setup.sh
kinect/devel/lib/kinect1/: kinect_point
kinect/devel/lib/pkgconfig/: kinect1.pc
kinect/src/kinect1/: CMakeLists.txt  package.xml
kinect/src/kinect1/src/: kinect_point.cpp
maps/: amcl.launch
ppt&codefile/pptcode/code/chapter3/topic_service/: CMakeLists.txt  package.xml
ppt&codefile/pptcode/code/chapter3/topic_service/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
ppt&codefile/pptcode/code/chapter4/: CMakeLists.txt
ppt&codefile/pptcode/code/chapter4/chapter2/: demo.launch
ppt&codefile/pptcode/code/chapter4/chapter2/intro_to_ros/listener/: CMakeLists.txt
ppt&codefile/pptcode/code/chapter4/chapter2/intro_to_ros/listener/src/: listener.cpp
ppt&codefile/pptcode/code/chapter4/chapter2/intro_to_ros/talker/: CMakeLists.txt
ppt&codefile/pptcode/code/chapter4/chapter2/intro_to_ros/talker/src/: talker.cpp
ppt&codefile/pptcode/code/chapter4/config/: chapter4.config
ppt&codefile/pptcode/code/chapter4/launch/: example1.launch  example4_5.launch  example7.launch
ppt&codefile/pptcode/code/chapter4/src/: example1.cpp  example4.cpp  example5.cpp
ppt&codefile/pptcode/code/chapter9/: CMakeLists.txt
ppt&codefile/pptcode/code/chapter9/launch/: robot_location.launch  tf_demo.launch  tf_demo2.launch
ppt&codefile/pptcode/code/chapter9/src/: tf_broadcaster.cpp
turtle/devel/: .catkin  .rosinstall  setup.sh
turtle/devel/lib/pkgconfig/: joycontrol.pc  turtle1.pc
turtle/devel/lib/turtle1/: talker
turtle/src/turtle1/: CMakeLists.txt  demo.launch
turtlebot/devel/: .catkin  .rosinstall  setup.sh
turtlebot/devel/include/final_project/: Centroid.h  CentroidRequest.h  CentroidResponse.h  Trajectory.h  TrajectoryRequest.h  TrajectoryResponse.h
turtlebot/devel/lib/collision_detector/: collision_turtlebot_node
turtlebot/devel/lib/laser_scan_publisher_tutorial/: laser_scan_publisher
turtlebot/devel/lib/odometry_publisher_tutorial/: odometry_publisher
turtlebot/src/joy/: joycontrol.launch
urdf/: demo.urdf  grasp.launch
urdf/myUR3/: myUR3.urdf
urdf/myUR3/gazebo/: controller.yaml
urdf/myarm/: CMakeLists.txt  package.xml
urdf/myarm/config/: joint_limits.yaml  visual.srdf
urdf/myarm/launch/: ompl_planning_pipeline.launch.xml  planning_context.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  warehouse.launch
(+128 files in other folders)
